force-app/main/default/objects/Show_Client__c/Show_Client__c.object-meta.xml
<CustomObject>
    <label>Show Client</label>
    <nameField>
        <label>First Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Show Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>