force-app/main/default/objects/Show_Client__c/fields/Secret_Question__c.field-meta.xml
<CustomField>
    <fullName>Secret_Question__c</fullName>
    <inlineHelpText>Please select Secret question</inlineHelpText>
    <label>Secret Question</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>What is your mother&apos;s maiden name?</fullName>
            </value>
            <value>
                <fullName>What is the name of your first pet?</fullName>
            </value>
            <value>
                <fullName>City of birth</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>