force-app/main/default/objects/Show_Client__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <displayFormat>{00000}</displayFormat>
    <label>User ID</label>
    <type>AutoNumber</type>
</CustomField>