force-app/main/default/objects/Show_Client__c/validationRules/Age_Must_Be_Greater_Than_18.validationRule-meta.xml
<ValidationRule>
    <fullName>Age_Must_Be_Greater_Than_18</fullName>
    <active>true</active>
    <errorConditionFormula>TODAY() - 6580 &lt;  DOB__c</errorConditionFormula>
    <errorMessage>Age must be greater than 18</errorMessage>
</ValidationRule>