force-app/main/default/objects/Show_Client__c/validationRules/Password_Equal_Confirm_Password_Client.validationRule-meta.xml
<ValidationRule>
    <fullName>Password_Equal_Confirm_Password_Client</fullName>
    <active>true</active>
    <errorConditionFormula>Password__c   &lt;&gt;   Confirm_Password__c</errorConditionFormula>
    <errorDisplayField>Password__c</errorDisplayField>
    <errorMessage>Password Should match confirm password</errorMessage>
</ValidationRule>